// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[snapshot] SquareImg SquareImg 1`] = `
<div
  className="SquareFence_wrap_3jTo2"
>
  <img
    alt="SquareImg"
    className="SquareImg_img_2gAcq"
    src="SquareImg.png"
    srcSet="
        square-320w.jpg,
        square-480w.jpg 1.5x,
        square-640w.jpg 2x"
  />
</div>
`;

exports[`[snapshot] SquareImg SquareImg with outerElementType 1`] = `
<span
  className="SquareFence_wrap_3jTo2"
>
  <img
    alt="SquareImg"
    className="SquareImg_img_2gAcq"
    src="SquareImg.png"
    srcSet="
        square-320w.jpg,
        square-480w.jpg 1.5x,
        square-640w.jpg 2x"
  />
</span>
`;
